# election_predictions

./: .gitignore  README.md  fec.py  pyproject.toml  requirements.txt  streamlit_app.py
FEC/: fec.py
VoteSmart/: andrew_vs.py  votesmart.py
data/processed/: app_candidates_2024.parquet  audit_paired_bootstrap.json  audit_step0a_pivotal_2022.json  audit_step0b_wayback_spike.json  backtest_results.jsonl  decile_thresholds.json  phase7_summary.json
notebooks/: 02_competitiveness_diagnostics.ipynb  03_backtest_curves.ipynb  04_stakes_diagnostics.ipynb  05_calibration_results.ipynb
scripts/: bake_app_data.py  build_all_features.sh  run_improvement_curve.sh
src/: fec.py
src/oath_score/: __init__.py  allocation.py  app.py  backtest.py  calibration.py  constants.py  feature_sets.py  features.py
src/oath_score/ingest/: __init__.py  _download.py  census.py  fec.py  fec_ie.py  opensecrets.py  pvi.py  ratings.py  results.py  wayback_cook.py
src/oath_score/scores/: __init__.py  _imputation.py  chamber.py  competitiveness.py  deciling.py  financial_need.py  impact.py  multi_quantile.py  stakes.py
tests/: conftest.py  test_allocation.py  test_backtest_metric.py  test_calibration.py  test_chamber.py  test_competitiveness.py  test_constants.py  test_deciling.py  test_feature_sets.py  test_features_filter.py  test_fec_snapshot.py  test_financial_need.py  test_impact.py  test_imputation.py  test_leakage_integration.py  test_multi_quantile.py  test_pvi_parser.py  test_ratings_parser.py  test_stakes_mc.py
