[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oath_score"
version = "0.1.0"
description = "Oath-style 1-10 impact scoring for U.S. House candidates: competitiveness, stakes, financial need."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "census>=0.8.21",
    "us>=3.1",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.3", "scipy>=1.12"]
ui = ["streamlit>=1.32", "altair>=5.2"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9", "ipykernel>=6.29"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oath_score*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
